# aws_list_all

./: .gitignore  .style.yapf  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  aws-list-all.py  aws_list_all.py  cost_explorer.py  docker-compose.yml  endpoint_hosts.json  main.py  pyproject.toml  query.py  release.sh  requirements.txt  service_regions.json  setup.py
.github/workflows/: test.yaml  tests.yaml
aws_list_all/: __main__.py  apply_filter.py  client.py  csv_convert.py  endpoint_hosts.json  fixing_filter.py  generate_html.py  introspection.py  listing.py  masterjson.json  merge.py  query.py  resource_filter.py  service_regions.json  test_introspection.py  unique.py
